--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
       }
    ],
    "require":{
-      "php": ">=5.5",
+      "php": "~5.5|~7.0",
       "guzzlehttp/guzzle":"6.*",
       "symfony/event-dispatcher":"~2.0|~3.0"
    },
