--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ php:
 before_script:
   - composer install -n --dev --prefer-source
 
-script: vendor/bin/php-cs-fixer fix --dry-run --verbose
+script: vendor/bin/php-cs-fixer fix --dry-run --verbose && vendor/bin/phpunit
