--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
       "symfony/event-dispatcher":"~2.0|~3.0"
    },
    "require-dev":{
-      "friendsofphp/php-cs-fixer":"~2.0"
+      "friendsofphp/php-cs-fixer":"~2.0",
+      "mockery/mockery": "^0.9.4",
+      "phpunit/phpunit": "6.*"
    },
    "extra":{
       "branch-alias":{
