--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
       }
    ],
    "require":{
-      "php": "~5.5|~7.0",
+      "php": "~7.0",
       "guzzlehttp/guzzle":"6.*",
-      "symfony/event-dispatcher":"~2.0|~3.0"
+      "symfony/event-dispatcher":"~3.0"
    },
    "require-dev":{
       "friendsofphp/php-cs-fixer":"~2.0",
@@ -32,5 +32,8 @@
       "psr-4":{
          "Sujip\\PayPal\\Notification\\":"src/"
       }
+   },
+   "scripts": {
+      "test": "vendor/bin/phpunit"
    }
 }
