--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
    "require":{
       "php": "~5.5|~7.0",
       "guzzlehttp/guzzle":"6.*",
-      "symfony/event-dispatcher":"~2.0|~3.0"
+      "symfony/event-dispatcher":"~2.0|~3.0|~4.0"
    },
    "require-dev":{
       "friendsofphp/php-cs-fixer":"~1.0"
